# personal_wildlife_stream

./: .gitignore  README.md  compose.yaml  pyproject.toml  streams.csv  test.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer3/: devcontainer.json  docker-compose.yml
.github/workflows/: black.yml
api/: app.py
api/routers/: __init__.py  streams.py  word_cloud.py
api/src/: main.py
api/src/core/: config.py
api/src/db_connections/: redis_connection.py
api/src/routers/: __init__.py  streams.py  word_cloud.py
heavyweight_detection/: Stream download and parameter extraction.ipynb
lightweight_detection/: Motion detection.ipynb  test.ipynb
src/: detect_birds.py  pyproject.toml  test.py
src/api/: .env.example  Dockerfile  compose.yaml  main.py  pyproject.toml
src/api/api/: main.py
src/api/api/core/: __init__.py  config.py  guards.py
src/api/api/db/: postgres.py  postgres_connection.py  redis_connection.py
src/api/api/db/connector/: __init__.py  postgres_connection.py  redis_connection.py
src/api/api/db/data/: streams.csv
src/api/api/db/seeders/: country_seeder.py  stream_seeder.py  stream_tag_seeder.py  users_seeder.py
src/api/api/models/: animal.py  country.py  stream.py  stream_animal.py  streams_animals.py  user.py
src/api/api/modules/: animal_information.py  configure_logging.py  weather_information.py
src/api/api/routers/: __init__.py
src/api/api/routers/v1/: internal.py  internal_streams.py  streams.py  word_cloud.py
src/api/core/: config.py  guards.py
src/api/db/: redis_connection.py  streams.csv
src/api/models/: country.py  stream.py  word_cloud_model.py
src/api/modules/: weather_information.py
src/api/routers/: __init__.py
src/api/routers/v1/: streams.py  word_cloud.py
src/audio_detction/: main.py
src/audio_detection/: .env.example  detect_audio.py  pyproject.toml
src/audio_detection/audio_detection/: detect_audio.py
src/audio_detection/audio_detection/core/: config.py
src/audio_detection/audio_detection/modules/: __init__.py  configure_logging.py  detect_birds.py
src/audio_detection/core/: config.py
src/audio_detection/modules/: detect_birds.py
src/audio_extractor/: main.py
src/bird_detector/: main.py
src/image_detection/: .env.example  detect_image.py  main.py  pyproject.toml  test.ipynb
src/image_detection/core/: config.py
src/image_detection/image_detection/: detect_image.py
src/image_detection/image_detection/core/: config.py
src/image_detection/image_detection/modules/: __init__.py  image_detection.py
src/image_detection/models/: best.pt
src/image_detection/modules/: image_detection.py
src/motion_detection/: .env.example  detect_motion.py  main.py  pyproject.toml
src/motion_detection/core/: config.py
src/motion_detection/modules/: motion_detection.py
src/motion_detection/motion_detection/: detect_motion.py
src/motion_detection/motion_detection/core/: config.py
src/motion_detection/motion_detection/modules/: __init__.py  motion_detection.py
src/narration_subtitle_generation/: .env.example  compose.yaml  pyproject.toml
src/narration_subtitle_generation/docker/prod/: Dockerfile
src/narration_subtitle_generation/narration_subtitle_generation/: generate_narration_subtitle.py
src/narration_subtitle_generation/narration_subtitle_generation/core/: config.py
src/narration_subtitle_generation/narration_subtitle_generation/modules/: __init__.py  generate_subtitle_file.py  mix_video.py  speech_generation.py  text_generation.py
src/speech_subtitle_generation/: .env.example  main.py
src/speech_subtitle_generation/core/: config.json
src/speech_subtitle_generation/models/: david.pth  final3.pt
src/speech_subtitle_generation/modules/: __init__.py
src/stream_data_extractor/: frame_extractor.py  main.py
src/stream_downloader/: .env.example  config.py  download_stream.py  downloader.py  file_watcher.py  main.py  pyproject.toml  queue_handler.py
src/stream_downloader/core/: config.py
src/stream_downloader/docker/prod/: Dockerfile
src/stream_downloader/modules/: downloader.py  file_watcher.py  queue_handler.py
src/stream_downloader/stream_downloader/: download_stream.py
src/stream_downloader/stream_downloader/core/: config.py
src/stream_downloader/stream_downloader/db/: redis_connection.py
src/stream_downloader/stream_downloader/modules/: __init__.py  configure_logging.py  downloader.py  file_watcher.py  queue_handler.py
src/stream_motion_detection/: main.py
src/stream_ranker/: .env.example  pyproject.toml  rank_stream.py
src/stream_ranker/core/: config.py
src/stream_ranker/modules/: stream_score.py
src/stream_ranker/stream_ranker/: rank_stream.py
src/stream_ranker/stream_ranker/core/: config.py
src/stream_ranker/stream_ranker/modules/: __init__.py  stream_score.py
src/stream_ranking/: config.py  main.py
src/subtitle_speech_generation/: config.py  main.py
src/utils/: frame_extractor.py
src/video_data_extractor/: .env.example  extract_video_data.py  pyproject.toml
src/video_data_extractor/core/: config.py
src/video_data_extractor/modules/: audio_extractor.py  frame_extractor.py
src/video_data_extractor/video_data_extractor/: extract_video_data.py
src/video_data_extractor/video_data_extractor/core/: config.py
src/video_data_extractor/video_data_extractor/modules/: __init__.py  audio_extractor.py  frame_extractor.py
src/video_streamer/: .env.example  main.py  main2.py  pyproject.toml  requirements.txt  stream_selector.py  video_stream.py
src/video_streamer/core/: config.py
src/video_streamer/modules/: file_streamer.py  stream_selector.py  streamer.py
src/video_streamer/video_streamer/: concat_list.txt  video_stream.py
src/video_streamer/video_streamer/core/: config.py
src/video_streamer/video_streamer/db/: __init__.py
src/video_streamer/video_streamer/modules/: __init__.py  file_streamer.py  stream_selector.py  streamer.py
trial_scripts/: asdasd.py  convert_location_to_long_lat.ipynb  integrated-taxonomic-information-system-API.ipynb  test.ipynb  test.py  test2.py  wordSimilarity.ipynb
