[tool.poetry]
package-mode = false
name = "image-detection"
version = "0.1.0"
description = "Detects animals in the extracted frames with YOLOv5."
authors = [
    "Bas Körver <bas_korver@outlook.com>",
    "CedricCortenraede <c.cortenraede@outlook.com>",
    "cemysh <tcvetkovanna@gmail.com>",
    "Jules Zeelen <jules.zeelen@hotmail.nl>",
    "KSandfort <konstantin.sandfort@gmail.com>",
    "Muradohi <muradohi96@gmail.com>",
]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.1.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.0"
torch = { version = "2.1.2", source="torch"}
torchaudio = { version = "2.1.2", source="torch"}
torchvision = { version = "0.16.2", source="torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
